dark mode fix and working

--- a/style/dark-mode.css
+++ b/style/dark-mode.css
@@ -18,3 +18,7 @@
 [data-theme="dark"] .footer-section {
   background-color: #49BDAC !important;
 }
+
+[data-theme="dark"] .footer-section {
+  color: #000 !important;
+}
